syntax = "proto3";

message Slot{
	  enum SlotType {
		NO_SENSOR = 0;
		TEMPERATURE = 1; // 0.1 degree 
		HUMIDITY = 2;    // % RH; values outside 100% RH and negative shall be interpreted as sensor error
		PRESSURE = 3;    // dPa; negative values shall be considered as sensor error
		DIFERENTIAL_PRESSURE = 4; // Pa
		RELAY = 5;
	  }
	  
	  /* type of slot */
	  SlotType type = 1;
	  
	  /* timestamp of first sample (oldest one) in seconds since UNIX EPOCH 01-01-1970 */
	  int32 timestamp = 2;
	  
	  /* starting point for data sample calculation in format defined by type field*/
	  sint32 start_point = 4;
	  
	  /* offset from starting point in format defined by type field; oldest sample first */
	  repeated sint32 sample_offsets = 5 [packed=true] ;
	  
	  /* slot lower thresholdconfig */
	  int32 lo_threshold = 6;
	  
	  /* slot higher thresholdconfig */
	  int32 hi_threshold = 7;

      /* slot differential thresholdconfig */
      int32 diff_threshold = 8;
  }

message Measurements {

  /* serial number of device */
  bytes serial_num = 1;  
  
  /* true - battery ok, false - battery low */
  bool battery_status = 2;  
  
  /* measurement period in seconds */
  int32 measurement_period = 3;     

  repeated Slot slots = 4;

  /* seconds left to next measurement */
  int32 next_measure = 5;

  /* reason of transmission */
  uint32 transfer_reason = 6;

  string cloud_token = 16;
}